--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+capturing-ethernet-frame-with-scope (1.3) bullseye; urgency=medium
+
+  * Replaced the title image link setup.jpg -> 01/setup.jpg since github renderer does not handle symbolic links
+
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Thu, 27 Jul 2023 15:37:29 +0200
+
 capturing-ethernet-frame-with-scope (1.2) bullseye; urgency=medium
 
   * Fixed markdown syntax error caused by missing space in section titles
