--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
-docs-template (1.0) bullseye; urgency=medium
+docs-wireless-lan-gpib-gateway-with-open-source-hardware (1.0) bullseye; urgency=medium
 
-  * Initial release.
+  * Initial release
 
- -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Tue, 02 May 2023 17:34:31 +0200
+ -- Vladimir Vassilev <vladimir@lightside-instruments.com>  Wed, 13 Sep 2023 13:32:40 +0200
